# Traceclip

./: README.md  pyproject.toml
.github/workflows/: ci.yml  detector_tests.yml  performance_tests.yml  test_cross-os.yml
src/traceclip/: __init__.py  cli.py  detector.py  fixer.py
tests/: __init__.py  test_detector.py  test_performance.py
tests/test_fixtures/: dirty_sample.py
