[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceclip"
version = "0.1.0"
description = "A fast, local linting wrapper specifically designed for AI-generated code."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Developer", email = "developer@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=12.0.0",
]

[project.scripts]
vibecheck = "traceclip.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/traceclip"]
